src/test/deca/context/valid/nonprovided/inst_boolean.deca
{
boolean a = 1 > 4;
}
