src/test/deca/context/invalid/nonprovided/init_opbool.deca
{
boolean x = "a" && 1 > 4;
}
